// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<DiscountBadge /> should render the text 1`] = `
<div
  className="ui-shared__discount-badge"
  data-test-id="foo"
>
  <Translate
    className="css-13de4di "
    params={
      Array [
        null,
      ]
    }
    role={null}
    string="foo"
    transform={null}
  />
</div>
`;

exports[`<DiscountBadge /> should render the text and discount 1`] = `
<div
  className="ui-shared__discount-badge"
  data-test-id="SAVE {0}%"
>
  <Translate
    className="css-13de4di "
    params={
      Array [
        20,
      ]
    }
    role={null}
    string="SAVE {0}%"
    transform={null}
  />
</div>
`;
